Fixed .tooltiptext overflow

--- a/src/styles/SCSS/_global.scss
+++ b/src/styles/SCSS/_global.scss
@@ -183,7 +183,7 @@ body {
 @mixin allSettings {
 	.as {
 		max-height: 0;
-		// overflow: hidden;
+		overflow: hidden;
 		transition: max-height 0.4s;
 	}
 
